# pro-desk-shell

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  devsh
.github/workflows/: main.yml  release.yml
ags/: config.js  style.css
cmake/: CompilerWarnings.cmake
cpp/: main.cpp
cpp/shell/: app_bootstrap.cpp  app_bootstrap.h
docs/: contributing.md  plan.md  timeline.md  todo.md
docs/architecture/: bootstrap.md
qml/: App.qml
qml/components/: DesktopTestBar.qml  LauncherPanel.qml  NotificationPanel.qml  OverviewPanel.qml  PlaceholderBar.qml  QuickSettingsPanel.qml  SessionPanel.qml  SettingsWindow.qml  ShellButton.qml  ShellTextField.qml  ShellTheme.qml  ShellToggleButton.qml  SurfaceCard.qml  TopBar.qml  WallpaperPanel.qml  WorkspaceStrip.qml
qml/components/chrome/: Dock.qml  DockItemButton.qml  MenuBar.qml
qml/components/foundation/: AppIcon.qml  FrostedPanel.qml  GlassButton.qml
qml/components/overlays/: ControlCenter.qml  MissionControl.qml  NotificationCenter.qml  Spotlight.qml  SystemMenu.qml
qml/components/theme/: ShellTheme.qml
rust/: Cargo.toml
rust/crates/shell-cli/: Cargo.toml
rust/crates/shell-cli/src/: main.rs
rust/crates/shell-core/: Cargo.toml
rust/crates/shell-core/src/: config.rs  desktop.rs  lib.rs  paths.rs  state.rs  system.rs
rust/crates/shell-core/tests/: shell_state.rs  system_parsers.rs
rust/crates/shell-hyprland/: Cargo.toml
rust/crates/shell-hyprland/src/: lib.rs
rust/crates/shell-ui-bridge/: .qmlls.ini  Cargo.toml  build.rs
rust/crates/shell-ui-bridge/src/: lib.rs  shell_state.rs
tools/bootstrap/: main.py
tools/bootstrap/assets/hyprland/: main.conf
tools/bootstrap/assets/hyprland/optional/: apps.conf
tools/bootstrap/assets/hyprland/required/: env.conf  execs.conf  keybinds.conf  rules.conf
tools/bootstrap/tests/: test_packages.py
