[workspace]
members = [
    "crates/shell-core",
    "crates/shell-hyprland",
    "crates/shell-cli",
]
default-members = [
    "crates/shell-core",
    "crates/shell-hyprland",
    "crates/shell-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"
