[package]
name = "shell_ui_bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.194"
cxx-qt = "0.8.1"
cxx-qt-lib = { version = "0.8.1", features = ["qt_full"] }
shell_core = { path = "../shell-core" }

[build-dependencies]
cxx-qt-build = "0.8.1"
